src/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>UserLoggingLevelOrdinal__c</fullName>
        <label>User Logging Level Ordinal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserLoggingLevel__c</fullName>
        <label>User Logging Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoggingLevel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <label>User Role ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + UserRoleId__c, UserRoleName__c, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleName__c</fullName>
        <label>User Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>PowerPartner</fullName>
                </value>
                <value>
                    <fullName>CSPLitePortal</fullName>
                </value>
                <value>
                    <fullName>CustomerSuccess</fullName>
                </value>
                <value>
                    <fullName>PowerCustomerSuccess</fullName>
                </value>
                <value>
                    <fullName>CsnOnly</fullName>
                </value>
                <value>
                    <fullName>AutomatedProcess</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WasLoggedByCurrentUser__c</fullName>
        <formula>$User.Id ==  LoggedBy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged By Current User</label>
        <type>Checkbox</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>AllAsynchronousLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SystemMode__c</field>
            <operation>equals</operation>
            <value>BATCH_ACS,BATCH_APEX,BATCH_CHUNK_PARALLEL,BATCH_CHUNK_SERIAL,BULK_API,FUTURE,QUEUEABLE,SCHEDULED</value>
        </filters>
        <label>All Asynchronous Logs</label>
    </listViews>
    <listViews>
        <fullName>AllBatchLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SystemMode__c</field>
            <operation>equals</operation>
            <value>BATCH_ACS,BATCH_APEX,BATCH_CHUNK_PARALLEL,BATCH_CHUNK_SERIAL</value>
        </filters>
        <label>All Batch Logs</label>
    </listViews>
    <listViews>
        <fullName>AllClosedLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>ClosedBy__c</columns>
        <columns>ClosedDate__c</columns>
        <columns>Issue__c</columns>
        <columns>Comments__c</columns>
        <columns>TransactionId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Logs</label>
    </listViews>
    <listViews>
        <fullName>AllLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <listViews>
        <fullName>AllLogsWithERROREntries</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TotalERRORLogEntries__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Logs with ERROR Entries</label>
    </listViews>
    <listViews>
        <fullName>AllLogsWithERRORorWARNEntries</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TotalERRORLogEntries__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TotalWARNLogEntries__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Logs with ERROR or WARN Entries</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Logs</label>
    </listViews>
    <listViews>
        <fullName>AllRESTLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SystemMode__c</field>
            <operation>equals</operation>
            <value>REST</value>
        </filters>
        <label>All REST Logs</label>
    </listViews>
    <listViews>
        <fullName>AllResolvedLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>ClosedBy__c</columns>
        <columns>ClosedDate__c</columns>
        <columns>Issue__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsResolved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Resolved Logs</label>
    </listViews>
    <listViews>
        <fullName>MyAssignedLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Assigned Logs</label>
    </listViews>
    <listViews>
        <fullName>MyAssignedOpenLogs</fullName>
        <columns>NAME</columns>
        <columns>LoggedByUsernameLink__c</columns>
        <columns>StartTime__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Assigned Open Logs</label>
    </listViews>
    <listViews>
        <fullName>MyGeneratedLogs</fullName>
        <columns>NAME</columns>
        <columns>StartTime__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>TransactionId__c</columns>
        <columns>TotalLimitsCpuTimeUsed__c</columns>
        <columns>TotalLogEntries__c</columns>
        <columns>TotalERRORLogEntries__c</columns>
        <columns>TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WasLoggedByCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Generated Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>LoggedByUser__c</fullName>
        <label>Log Created By User</label>
    </sharingReasons>
</CustomObject>